--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -249,7 +249,7 @@
     text-decoration: none;
 
     &:hover {
-      text-decoration: underline;
+      text-decoration: none;
     }
   }
 }
@@ -263,7 +263,7 @@
     color: inherit;
     text-decoration: none;
     &:hover {
-      text-decoration: underline;
+      text-decoration: none;
     }
   }
   @include breakpoint($large) {
