--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -64,7 +64,7 @@
         }
         
         img:hover {
-            transform: scale(1.01);
+            transform: none;
             box-shadow: 0 4px 12px rgba(1, 47, 99, 0.12);
         }
     }
